# motionControlModule

./: .gitignore  CMakeLists.txt  README.md  plotTemperature.xml  temperatureManager.yml  temperatureScope.xml
app/conf/: config.ini
src/: TemperatureManager.cpp  TemperatureManager.h  main.cpp
